--- a/ai-predictions.html
+++ b/ai-predictions.html
@@ -67,10 +67,12 @@
         </div>
       </div>
       <div id="predPlot" class="plot"></div>
-      <p class="muted" style="margin-top:8px">
-        الألوان حسب <b>predicted_label</b>، ويمكن التبديل بين الرسوم الشائعة لمجموعة KOI: مدة العبور × عمقه، نصف القطر × SNR، توزيع SNR،
-        وصناديق لعمق العبور على مقياس لوغاريتمي.
-      </p>
+      Here’s the English version of your HTML paragraph:
+<p class="muted" style="margin-top:8px">
+  Colors are based on <b>predicted_label</b>, and you can switch between common KOI plots: 
+  transit duration × depth, radius × SNR, SNR distribution, 
+  and box plots for transit depth on a logarithmic scale.
+</p>
     </section>
     
 
@@ -93,7 +95,9 @@
         </div>
       </div>
       <div id="featurePlot" class="plot"></div>
-      <p class="muted" style="margin-top:8px">نحسب قوة الإشارة (|correlation|) لكل عمود رقمي مع الهدف المختار.</p>
+<p class="muted" style="margin-top:8px">
+  We calculate the signal strength (|correlation|) for each numeric column with the selected target.
+</p>   
     </section>
   </main>
 
