--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>🚀 NASA Data Studio — Star Navigators Team </title>
+  <title>🚀 NASA Data Studio — t3ch.mind </title>
   <link rel="stylesheet" href="styles.css"/>
   <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin/>
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
@@ -23,7 +23,7 @@
           <stop offset="0%" stop-color="#7c5cff"/><stop offset="100%" stop-color="#3dd9eb"/></linearGradient></defs>
         <path fill="url(#g1)" d="M12 2l2.39 4.84 5.34.78-3.86 3.77.91 5.32L12 14.77 7.22 16.71l.91-5.32L4.27 7.62l5.34-.78L12 2z"/>
       </svg>
-      <span>NASA Data Studio — Star Navigators Team</span>
+      <span>NASA Data Studio — t3ch.mind </span>
     </div>
     <nav>
       <a href="#apod">APOD</a>
@@ -286,7 +286,7 @@ Designed to combine science, data, and visualization in one place.</p>
 </main>
 
   <footer class="footer">
-    <small>© 2025 NASA Data Studio — Crafted for Star Navigators Team 🌙</small>
+    <small>© 2025 NASA Data Studio — Crafted for t3ch.mind 🌙</small>
   </footer>
 
   <template id="tooltipTpl"><div class="tooltip"></div></template>
